dark mode issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
     font-family: 'inter';
     margin: 0px;
 }
+body{
+    background-color: white;
+}
 .shadow{
     box-shadow: 0px 9px 14px 2px rgba(72, 72, 72, 0.08);
     border-radius: 20px;
